--- a/app/src/main/res/layout/fragment_edit_domain.xml
+++ b/app/src/main/res/layout/fragment_edit_domain.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
         <variable
             name="viewModel"
-            type="com.example.mylink.viewmodel.DomainViewModel" />
+            type="com.example.mylink.viewmodel.domain.DomainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +24,6 @@
         <TextView
             android:id="@+id/urlTextView"
             style="@style/header4"
-            android:fontFamily="@font/jalnanche"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="주소"
@@ -38,7 +37,7 @@
             android:layout_height="50dp"
             android:ems="10"
             android:hint="http://www..."
-            android:text="@={viewModel.domainUrl}"
+            android:text="@={viewModel.bindingDomainUrl}"
             app:layout_constraintEnd_toEndOf="@+id/urlTextView"
             app:layout_constraintStart_toStartOf="@+id/urlTextView"
             app:layout_constraintTop_toBottomOf="@+id/urlTextView" />
@@ -46,14 +45,13 @@
         <TextView
             android:id="@+id/nameTextView"
             style="@style/header4"
-            android:fontFamily="@font/jalnanche"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
             android:text="이름"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <EditText
             android:id="@+id/nameEdtiText"
@@ -61,7 +59,7 @@
             android:layout_height="50dp"
             android:ems="10"
             android:hint="이름을 입력해주세요"
-            android:text="@={viewModel.domainName}"
+            android:text="@={viewModel.bindingDomainName}"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/nameTextView"
             app:layout_constraintStart_toStartOf="@+id/nameTextView"
