--- a/app/src/main/res/layout/item_detail_video.xml
+++ b/app/src/main/res/layout/item_detail_video.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.mylink.viewmodel.DetailLinkViewModel" />
+            type="com.example.mylink.viewmodel.detail_link.DetailLinkViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
