--- a/app/src/main/res/color/color_chip_background.xml
+++ b/app/src/main/res/color/color_chip_background.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_checked="true"
-        android:color="@color/my_purple" />
+        android:color="@color/maincolor" />
     <item
-        android:state_checked="false"
+        android:state_checked="true"
         android:color="@color/light_gray"
         />
 </selector>
