--- a/app/src/main/res/color/color_chip_text.xml
+++ b/app/src/main/res/color/color_chip_text.xml
@@ -5,6 +5,6 @@
         android:color="@color/white" />
     <item
         android:state_checked="false"
-        android:color="@color/charcoal"
+        android:color="@color/maincolor"
         />
 </selector>
