--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,7 +2,7 @@
 <resources>
     <declare-styleable name="CustomBasicToolbar">
         <attr name ="toolbarTitle" format="string"/>
+        <attr name="android:fontFamily">@font/jalnanche</attr>
+        <attr name="android:textColor">@android:color/white</attr>
     </declare-styleable>
-    <attr format="color" name="colorSurface"/>
-    <attr name="colorOnBackground"/>
 </resources>
