--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,12 +3,12 @@
     <style name="Theme.MyLink" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/maincolor</item>
-        <item name="colorPrimaryVariant">@color/maincolor</item>
+        <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/maincolor</item>
         <!-- Customize your theme here. -->
         <item name="colorSecondaryVariant">@color/gray</item>
         <item name="colorOnSecondary">@color/white</item>
@@ -17,73 +17,11 @@
 
         <item name="windowNoTitle">true</item>
     </style>
-    <style name="important2" parent="TextAppearance.AppCompat">
-        <item name="android:textSize">16sp</item>
-        <item name="android:paddingVertical">10dp</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-        <item name="android:textStyle">bold</item>
-    </style>
 
-    <style name="important3" parent="TextAppearance.AppCompat">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="important6">
-        <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/gray</item>
-    </style>
-
-    <style name="imageButton">
-        <item name="android:scaleType">fitStart</item>
-        <item name="android:padding">10dp</item>
-    </style>
-
-
-    <style name="small3">
-        <item name="android:textSize">11sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="header1">
-        <item name="android:paddingVertical">20dp</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-        <item name="android:textSize">35sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="header2">
-        <item name="android:paddingVertical">15dp</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-        <item name="android:textSize">28sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="header3">
-        <item name="android:paddingVertical">10dp</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-        <item name="android:textSize">25sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="header4">
-        <item name="android:paddingVertical">8dp</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="header5">
-        <item name="android:paddingVertical">5dp</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-        <item name="android:textSize">18sp</item>
-    </style>
-
-    <style name="header6">
-        <item name="android:paddingVertical">3dp</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-
+    <attr format="color" name="colorSurface"/>
+    <attr format="color" name="colorContainer"/>
+    <attr format="color" name="colorErrorContainer"/>
+    <attr name="colorOnBackground"/>
+    <attr format="color" name="colorOnContainer"/>
+    <attr format="color" name="colorOnError"/>
 </resources>
