--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -14,6 +14,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="important4" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+    </style>
+
     <style name="important6">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/gray</item>
